<resources>
    <string name="app_name">Submission1</string>
    <string name="user_name">Username</string>
    <string name="search">search</string>
    <string name="search_hint">Search..</string>
    <string name="name_detail">Name</string>
    <string name="repositorySize">0</string>
    <string name="repo">Repository</string>
    <string name="followersSize">0</string>
    <string name="followers">Followers</string>
    <string name="followingSize">0</string>
    <string name="following">Following</string>
    <string name="name">Fullname</string>
    <string name="company">Company</string>
    <string name="location">Location</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_text_1">Followers</string>
    <string name="tab_text_2">Following</string>
    <string name="hello_blank_fragment2">Following</string>
    <string name="content_tab_text">ini tab follow</string>
    <string name="favorite">Favorite</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="setting">Setting</string>
    <string name="username">arif</string>
    <string name="noname">No Name.</string>
    <string name="nocompany">No Company.</string>
    <string name="nolocation">No Location.</string>
</resources>