<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.activity.UserDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/userAvatar"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/userRepo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repositorySize"
            app:layout_constraintBottom_toTopOf="@+id/repository"
            app:layout_constraintEnd_toEndOf="@+id/repository"
            app:layout_constraintStart_toStartOf="@+id/repository"
            app:layout_constraintTop_toTopOf="@+id/userAvatar" />

        <TextView
            android:id="@+id/repository"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/repo"
            app:layout_constraintBottom_toBottomOf="@+id/userAvatar"
            app:layout_constraintStart_toEndOf="@+id/userAvatar"
            app:layout_constraintTop_toTopOf="@+id/userAvatar" />

        <TextView
            android:id="@+id/userFollowers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/followersSize"
            app:layout_constraintBottom_toTopOf="@+id/followers"
            app:layout_constraintEnd_toEndOf="@+id/followers"
            app:layout_constraintStart_toStartOf="@+id/followers"
            app:layout_constraintTop_toTopOf="@+id/userAvatar" />

        <TextView
            android:id="@+id/followers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/followers"
            app:layout_constraintBottom_toBottomOf="@+id/repository"
            app:layout_constraintStart_toEndOf="@+id/repository"
            app:layout_constraintTop_toTopOf="@+id/repository" />

        <TextView
            android:id="@+id/userFollowing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/followingSize"
            app:layout_constraintBottom_toTopOf="@+id/following"
            app:layout_constraintEnd_toEndOf="@+id/following"
            app:layout_constraintStart_toStartOf="@+id/following"
            app:layout_constraintTop_toTopOf="@+id/userAvatar" />

        <TextView
            android:id="@+id/following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/following"
            app:layout_constraintBottom_toBottomOf="@+id/followers"
            app:layout_constraintStart_toEndOf="@+id/followers"
            app:layout_constraintTop_toTopOf="@+id/followers" />

        <TextView
            android:id="@+id/fullname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/name"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/userAvatar"
            app:layout_constraintTop_toBottomOf="@+id/userAvatar" />

        <TextView
            android:id="@+id/userCompany"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/company"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/userAvatar"
            app:layout_constraintTop_toBottomOf="@+id/fullname" />

        <TextView
            android:id="@+id/userLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/userAvatar"
            app:layout_constraintTop_toBottomOf="@+id/userCompany" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/userLocation"
            tools:ignore="SpeakableTextPresentCheck"
            tools:layout_editor_absoluteX="0dp" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="411dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tabs"
            app:layout_constraintVertical_bias="0.0" />

        <ProgressBar
            android:id="@+id/progressBar2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnFavorite"
            android:layout_margin="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_favorite_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:tint="@color/white"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>